src/objects/TemplateType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Template Type</description>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Template Type</label>
</CustomObject>